--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,8 +39,9 @@ jobs:
         # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v1
+      with:
+          submodules: true
 
     - uses: actions/setup-java@v1
       with:
