--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -41,6 +41,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+    - name: Set up java
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '8'
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -59,6 +64,9 @@ jobs:
     # If this step fails, then you should remove it and run the build manually (see below)
     # - name: Autobuild
     #  uses: github/codeql-action/autobuild@v2
+    - name: Initializing and updating submodules
+      run: git submodule init && git submodule update
+      
     - name: Building
       run: ./mvnw -q -Dmaven.test.skip=true clean install
     # ℹ️ Command-line programs to run using the OS shell.
